welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: illegal start of simple expression
    if (estFaceMur() == True):
                             ^